--- a/HTML CSS exercise/shoppingWebSite/index.html
+++ b/HTML CSS exercise/shoppingWebSite/index.html
@@ -94,43 +94,54 @@
 				</div>
 				<div class="pay"><img src="images/pay_bg.png" alt=""></div>
 			</div>
-			<div class="right">
+			<div class="right" id="boxR">
 				<div class="sort clear">
 					<span class="sortBy">Sort by:</span>
 					<dl class="sortcom">
+						<dt>Ascending<a href="javascript:;"></a></dt>
+							<dd style="display:none;">
+							<ul>
+								<li><a href="javascript:;">Ascending</a></li>
+								<li><a href="javascript:;">Ascending1</a></li>
+								<li><a href="javascript:;">Ascending2</a></li>
+								<li><a href="javascript:;">Ascending3</a></li>
+							</ul>
+							</dd>
+					</dl>
+
+					<dl class="sortcom">
 						<dt>Ascending <a href="javascript:;"></a> </dt>
-							<dd class="active noshow"><a href="javascript:;">Ascending</a></dd>
-							<dd class="noshow"><a href="javascript:;">Ascending1</a></dd>
-							<dd class="noshow"><a href="javascript:;">Ascending2</a></dd>
-							<dd class="noshow"><a href="javascript:;">Ascending3</a></dd>
-						<a href="javascript:;"></a>
+							<dd style="display:none;">
+							<ul>
+								<li><a href="javascript:;">Ascending</a></li>
+								<li><a href="javascript:;">Ascending10</a></li>
+								<li><a href="javascript:;">Ascending20</a></li>
+								<li><a href="javascript:;">Ascending30</a></li>
+							</ul>
+							</dd>
 					</dl>
 
 					<dl class="sortcom">
-						<dt>Product Name <a href="javascript:;"></a> </dt>
-							<dd class="active noshow"><a href="javascript:;">Product Name</a></dd>
-							<dd class="noshow"><a href="javascript:;">Product Name1</a></dd>
-							<dd class="noshow"><a href="javascript:;">Product Name2</a></dd>
-							<dd class="noshow"><a href="javascript:;">Product Name3</a></dd>
-						<a href="javascript:;"></a>
+						<dt>Ascending <a href="javascript:;"></a> </dt>
+							<dd style="display:none;">
+							<ul>
+								<li><a href="javascript:;">Ascending</a></li>
+								<li><a href="javascript:;">Ascending11</a></li>
+								<li><a href="javascript:;">Ascending22</a></li>
+								<li><a href="javascript:;">Ascending33</a></li>
+							</ul>
+							</dd>
 					</dl>
 
-					<dl class="sortcom">
-						<dt>Brand Name <a href="javascript:;"></a> </dt>
-							<dd class="active noshow"><a href="javascript:;">Brand Name</a></dd>
-							<dd class="noshow"><a href="javascript:;">Brand Name1</a></dd>
-							<dd class="noshow"><a href="javascript:;">Brand Name2</a></dd>
-							<dd class="noshow"><a href="javascript:;">Brand Name3</a></dd>
-						<a href="javascript:;"></a>
-					</dl>
-					<div class="perPage">
+					
+				</div>
+				<div class="perPage">
 						<span>items per page:</span>
 						<a href="javascript:;">12</a> /
 						<a href="javascript:;">20</a> /
 						<a href="javascript:;">30</a> /
 						<a href="javascript:;">50</a>
 					</div>
-				</div>
 				<h2>OUR PRODUCTS</h2>
 				<ul class="clear maincontent">
 					<li class="active">
