shoppingWebSite has been fished

--- a/HTML CSS exercise/shoppingWebSite/index.html
+++ b/HTML CSS exercise/shoppingWebSite/index.html
@@ -5,7 +5,8 @@
 	<meta charset="UTF-8">
 	<title>welcome</title>
 	<link rel="stylesheet" href="style/style.css" />
-	<script src="js/main.js"></script>
+	<script src="js/main.js">
+</script>
 </head>
 
 <body>
@@ -169,7 +170,7 @@
 					<li>
 						<a href="javascript:;"><img src="images/product_images/4.jpg" alt=""></a>
 						<p>Product Name</p>Price:<span> $12.99</span></li>
-
+						
 					<li>
 						<a href="javascript:;"><img src="images/product_images/1.jpg" alt=""></a>
 						<p>Product Name</p>Price:<span> $12.99</span></li>
@@ -194,26 +195,24 @@
 				</div>
 				<div class="featuredPr">
 					<h2>FEATURED PRODUCTS</h2>
+					<div>
+					<div class="scrollWrap">
 					<ul>
 						<li>
-							<a href="javascript:;"><img class="active" src="images/featuredPr/1.jpg" alt="">
+							<a href="javascript:;"><img class="active" src="images/featuredPr/1.jpg" alt=""></img></a>
 								<p>Elegant MP3 player skin PSD download</p>
-								</img>
-							</a>
 						</li>
 						<li>
-							<a href="javascript:;"><img src="images/featuredPr/2.jpg" alt="">
+							<a href="javascript:;"><img class="active" src="images/featuredPr/2.jpg" alt=""></img></a>
 								<p>Elegant MP3 player skin PSD download</p>
-								</img>
-							</a>
 						</li>
-						<li class="lastItem">
-							<a href="javascript:;"><img src="images/featuredPr/3.jpg" alt="">
+						<li>
+							<a href="javascript:;"><img class="active" src="images/featuredPr/3.jpg" alt=""></img></a>
 								<p>Elegant MP3 player skin PSD download</p>
-								</img>
-							</a>
 						</li>
 					</ul>
+					</div>
+					</div>
 					<a class="prev" href="javascript:;"></a>
 					<a class="next" href="javascript:;"></a>
 				</div>
